# zephyr

modules/mbedtls/configs/: config-tls-generic.h
samples/boards/esp32/TCP_echo/: CMakeLists.txt
samples/boards/esp32/TCP_echo/src/: main.c
samples/boards/esp32/basic_tls/: CMakeLists.txt  prj.conf
samples/boards/esp32/basic_tls/src/: demo_config.h  main.c  mbedtls_zephyr.c  mbedtls_zephyr.h  sockets_zephyr.c  sockets_zephyr.h
samples/boards/esp32/mqtt/: CMakeLists.txt
samples/boards/esp32/mqtt/logging-stack/: logging_stack.h
samples/boards/esp32/mqtt/platform_zephyr/: prj.conf  zephyrFilePaths.cmake
samples/boards/esp32/mqtt/platform_zephyr/transport/include/: plaintext_zephyr.h
samples/boards/esp32/mqtt/platform_zephyr/transport/src/: plaintext_zephyr.c  sockets_zephyr.c
samples/boards/esp32/mqtt/src/: demo_config.h  main.c
samples/boards/esp32/mqtt2/: CMakeLists.txt  prj.conf
samples/boards/esp32/mqtt2/src/: demo_config.h  main.c  plaintext_zephyr.c  plaintext_zephyr.h  sockets_zephyr.c
samples/boards/esp32/mqtt_mutual_auth/: CMakeLists.txt  prj.conf
samples/boards/esp32/mqtt_mutual_auth/src/: demo_config.h  main.c  mbedtls_zephyr.c  mbedtls_zephyr.h  sockets_zephyr.c
samples/boards/esp32/wifi_with_dns/: prj.conf
samples/boards/esp32/wifi_with_dns/src/: main.c
samples/net/sockets/echo_server/: Makefile.posix
subsys/net/lib/sockets/: getaddrinfo.c
